LAB3 just completed

--- a/Lab3new.ipynb
+++ b/Lab3new.ipynb
@@ -569,10 +569,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Значение интеграла =  -0.12062577688133785\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "def ResultOfCounting(a,b):\n",
+    "    square = 0 # Площадь\n",
+    "    for interval in range(100):\n",
+    "        h = (b-a)/100\n",
+    "        x = (interval * h + a)\n",
+    "        y = np.cos(np.exp(x))\n",
+    "        square += y * h\n",
+    "    return square\n",
+    "\n",
+    "\n",
+    "a, b = map(int,(input(\"Введите a и b через пробел\")).split())\n",
+    "print(f\"Значение интеграла =  {ResultOfCounting(a,b)}\")"
+   ]
   }
  ],
  "metadata": {
