Almost completed LAB5

--- a/Lab4.ipynb
+++ b/Lab4.ipynb
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -656,14 +656,14 @@
     "    y, z = r\n",
     "    return [z, -g]\n",
     "\n",
-    "sol = solve_ivp(f, [t0,tn], [y0,dy0], max_step = 0.01)\n",
+    "solve = solve_ivp(f, [t0,tn], [y0,dy0], max_step = 0.01)\n",
     "\n",
-    "print(sol)\n",
+    "print(solve)\n",
     "\n",
     "def DrawGraphic():\n",
-    "    coordinate = sol.y[0]\n",
-    "    speed = sol.y[1]\n",
-    "    time = sol.t\n",
+    "    coordinate = solve.y[0]\n",
+    "    speed = solve.y[1]\n",
+    "    time = solve.t\n",
     "\n",
     "    fig1 = plt.figure()\n",
     "    ax1 = fig1.add_subplot(1,1,1)\n",
@@ -682,7 +682,7 @@
     "\n",
     "\n",
     "\n",
-    "if sol.success:\n",
+    "if solve.success:\n",
     "    DrawGraphic()\n"
    ]
   },
@@ -993,7 +993,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Выводы : В ходе выполнения данной лаболаторной работы было произведено ознакомление с библиотекой scipy.integrate, позволяющей решать интералы и системы дифференциальных уравнений. Для достижения поставленных в лабораторной работе целнй была использована фунция solve_inp, позволяющая численно решать ДУ и системы ДУ, разрешенные относительно производной. Результатом проделанной работы являются смоделированое решение ДУ 1-го порядка методом Эйлера, радиоактиынвный распад, движение тел в гравитационном поле без учета трения и движение тел в гравитационном поле с учетом силы трения и их графики."
+    "Выводы : В ходе выполнения данной лабораторной работы было произведено ознакомление с библиотекой scipy.integrate, позволяющей решать интералы и системы дифференциальных уравнений. Для достижения поставленных в лабораторной работе целнй была использована фунция solve_inp, позволяющая численно решать ДУ и системы ДУ, разрешенные относительно производной. Результатом проделанной работы являются смоделированое решение ДУ 1-го порядка методом Эйлера, радиоактиынвный распад, движение тел в гравитационном поле без учета трения и движение тел в гравитационном поле с учетом силы трения и их графики."
    ]
   }
  ],
